# compression

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: bin.rs  lib.rs  lz77.rs  lz78.rs  main.rs
src/encoding/: arit.rs  mod.rs
src/lib/: lib.rs
src/lib/encoding/: arit.rs  elias.rs  huffman.rs  mod.rs
src/lib/lz/: lz77.rs  lz78.rs  lzw.rs  mod.rs
src/lib/transform/: bwt.rs  mod.rs  mtf.rs
src/lz/: lz77.rs  lz78.rs  lzw.rs  mod.rs
src/transform/: bwt.rs  mod.rs  mtf.rs
