[package]
name = "compression"
version = "0.1.0"
edition = "2024"
authors = ["TCA"]
description = "A library providing implementations of generic compression algorithms."
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/TCA166/compression"
categories = ["compression", "algorithms", "command-line-utilities"]
keywords = ["compression", "lzw", "lz77", "lz78"]

[dependencies]
ciborium = "0.2.2"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }

[lib]
name = "compress_lib"
path = "src/lib.rs"

[[bin]]
name = "compress_bin"
path = "src/bin.rs"
