[package]
name = "generic_compression"
version = "0.1.0"
edition = "2024"
authors = ["TCA"]
description = "A library providing generic implementations of common compression algorithms."
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/TCA166/compression"
categories = ["compression", "algorithms", "command-line-utilities"]
keywords = ["compression", "lzw", "huffman", "encoding", "decoding"]

[dependencies]
bits-io = "0.5.2"
clap = { version = "4.5.37", features = ["derive"] }
num = "0.4.3"
num-traits = "0.2.19"
serde = { version = "1.0.219", optional = true }

[features]
serde = ["dep:serde"]

[lib]
name = "generic_compression"
path = "src/lib/lib.rs"

[[bin]]
name = "generic_compression_cli"
path = "src/bin/bin.rs"
